Revert "trivial: Fix the padding in the new hamburger menu"
That commit added extra padding in the primary menu that no other app has,
remove it.

This reverts commit 26c02f458ab2b3b495ce2134c525e1a24d1d46d0.

--- a/src/gtk-style.css
+++ b/src/gtk-style.css
@@ -389,10 +389,6 @@ button.star, .button.star {
 	outline-offset: -1px;
 }
 
-modelbutton {
-	padding: 3px;
-}
-
 /* i have no idea why GTK adds padding here */
 flowboxchild {
 	padding: 0px;
